--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.13.1"
   },
   "description": ""
