--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Prachi Yadav",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.4",
