--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "e-commerce",
+  "name": "invoice-generator",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
+    "start": "node server/index.js",
+    "dev": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
